# compressed_index

./: CMakeLists.txt  README.md
include/: BufferedList.h  DummyPayloadList.h  InvertedIndex.h  InvertedIndexBuilder.h  InvertedList.h  InvertedListBuilder.h  MinInvertedList.h  MinPayloadList.h  MultiListOperator.h  PForDelta.h  PForDeltaPayloadList.h  PForDeltaUtils.h  PayloadList.h  PayloadListBuilder.h  QueryObject.h  ResultObject.h  ScoringIterator.h  Simple9.h  Simple9Utils.h  TopKWandOperator.h  UncompressedList.h  VarByteList.h  Wand.h  WandBM25.h  WandTfidf.h  buffer.h
programs/: README.txt  compress_index.cpp  generar_docsize.cpp  generar_idf.cpp  generar_ubs.cpp  index_simple.cpp
src/: BufferedList.cpp  DummyPayloadList.cpp  InvertedIndex.cpp  InvertedIndexBuilder.cpp  InvertedList.cpp  InvertedListBuilder.cpp  MinInvertedList.cpp  MinPayloadList.cpp  MultiListOperator.cpp  PForDelta.cpp  PForDeltaPayloadList.cpp  PForDeltaUtils.cpp  PayloadList.cpp  PayloadListBuilder.cpp  QueryObject.cpp  ResultObject.cpp  ScoringIterator.cpp  Simple9.cpp  Simple9Utils.cpp  TopKWandOperator.cpp  UncompressedList.cpp  VarByteList.cpp  Wand.cpp  WandBM25.cpp  WandTfidf.cpp
